# CohortFinder

./: .gitignore  LICENSE  README.md  cohortfinder_colormod_original.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
cohortfinder/: __init__.py  __main__.py  _version.py  cohortfinder.py  cohortfinder_colormod_original.py
cohortfinder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cohortfinder/test/: cohortfinder_choosehappy_tests.py
cohortfinder/test/histoqc_outdir/cohortfinder_output_20240207-221740/: results_cohortfinder.tsv
cohortfinder/test/histoqc_outdir/cohortfinder_output_20240229-170838/: results_cohortfinder.tsv
src/cohortfinder_choosehappy/: cohortfinder_colormod_original.py
src/cohortfinder_choosehappy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cohortfinder_choosehappy/histoqc/: Untitled.ipynb  results.tsv
src/cohortfinder_choosehappy/histoqc/cohortfinder_output_20231116-153629/: results_cohortfinder.tsv
test/: cohortfinder_choosehappy_tests.py
