[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cohortfinder_choosehappy"
version = "0.0.1"
description = "Intelligent data partitioning using quality control metrics"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/choosehappy/CohortFinder"
"Bug Tracker" = "https://github.com/choosehappy/CohortFinder/issues"