[metadata]
name = cohortfinder
url = https://github.com/choosehappy/CohortFinder
download_url = https://github.com/choosehappy/CohortFinder
license = BSD
license_file = LICENSE.txt
description = Intelligent data partitioning using quality control metrics
long_description = file: Readme.md
long_description_content_type = text/markdown
author = Andrew Janowczyk
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
packages =
    cohortfinder
python_requires = >=3.7
install_requires =
    matplotlib==3.3.4
    numpy==1.23.5
    opencv_python_headless==4.9.0.80
    pandas==2.2.1
    scikit_learn==1.2.1
    scipy==1.6.1
    umap_learn==0.5.2

[options.extras_require]
tests =
    pytest
    pytest-cov
    requests

[options.entry_points]
console_scripts =
    run_module = cohortfinder.__main__:main